header, nav finished

--- a/index.html
+++ b/index.html
@@ -31,23 +31,29 @@
     </style>
   </head>
   <body>
-    <header class="header">
-      <nav class="navigation">
-        <img src="./images/logo.svg" alt="" />
-        <ul class="navigation-list">
-          <li class="navigation-item">About</li>
-          <li class="navigation-item">Careers</li>
-          <li class="navigation-item">Events</li>
-          <li class="navigation-item">Products</li>
-          <li class="navigation-item">Support</li>
-        </ul>
-      </nav>
-      <h1 class="heading-primary">
-        Immersive <br />
-        Experiences <br />
-        That Deliver
-      </h1>
-    </header>
+    <div class="header-container">
+      <header
+        class="header u-margin-right-left--big u-padding-top--big u-padding-bottom--big"
+      >
+        <nav class="navigation">
+          <img class="navigation__logo" src="./images/logo.svg" alt="" />
+          <ul class="navigation-list">
+            <li class="navigation-item">About</li>
+            <li class="navigation-item">Careers</li>
+            <li class="navigation-item">Events</li>
+            <li class="navigation-item">Products</li>
+            <li class="navigation-item">Support</li>
+          </ul>
+        </nav>
+        <div class="header__heading u-margin-top--big">
+          <h1 class="heading-primary">
+            immersive <br />
+            Experiences <br />
+            That Deliver
+          </h1>
+        </div>
+      </header>
+    </div>
 
     <main>
       <section class="section__about">
