--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="navigation-item">Support</li>
           </ul>
         </nav>
-        <div class="header__heading u-margin-top--big">
+        <div class="header__heading u-margin-top--medium">
           <h1 class="heading-primary">
             immersive <br />
             Experiences <br />
@@ -56,18 +56,20 @@
     </div>
 
     <main>
-      <section class="section__about">
+      <section
+        class="section__about u-margin-top--big u-margin-right-left--big"
+      >
         <img
           class="about__img"
           src="./images/desktop/image-interactive.jpg"
           alt=""
         />
         <div class="about__text">
-          <h2 class="heading-secondary">
+          <h2 class="about__heading heading-secondary">
             The Leader In <br />
             Interactive VR
           </h2>
-          <p class="paragraph">
+          <p class="about__paragraph paragraph">
             Founded in 2011, Loopstudios has been producing world-class virtual
             reality projects for some of the best companies around the globe.
             Our award-winning creations have transformed businesses through
@@ -75,7 +77,9 @@
           </p>
         </div>
       </section>
-      <section class="section__features">
+      <section
+        class="section__features u-margin-right-left--big u-margin-top--big"
+      >
         <div class="features__heading">
           <h2 class="heading-secondary">Our Creations</h2>
           <a href="#" class="btn"></a>
