features section heading

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
   </head>
   <body>
     <div class="header-container">
-      <header
-        class="header u-margin-right-left--big u-padding-top--big u-padding-bottom--big"
-      >
+      <header class="header u-margin-right-left--big u-padding-top--small">
         <nav class="navigation">
           <img class="navigation__logo" src="./images/logo.svg" alt="" />
           <ul class="navigation-list">
@@ -45,7 +43,7 @@
             <li class="navigation-item">Support</li>
           </ul>
         </nav>
-        <div class="header__heading u-margin-top--medium">
+        <div class="header__heading">
           <h1 class="heading-primary">
             immersive <br />
             Experiences <br />
@@ -82,7 +80,7 @@
       >
         <div class="features__heading">
           <h2 class="heading-secondary">Our Creations</h2>
-          <a href="#" class="btn"></a>
+          <a href="#" class="btn">See all</a>
         </div>
         <div class="features__grid">
           <div
