features grid initial setup

--- a/index.html
+++ b/index.html
@@ -82,81 +82,54 @@
           <h2 class="heading-secondary">Our Creations</h2>
           <a href="#" class="btn">See all</a>
         </div>
-        <div class="features__grid">
-          <div
-            class="grid__item"
-            style="background-image: url(./images/desktop/image-deep-earth.jpg)"
-          >
-            <p class="heading-tertiary">Deep Earth</p>
+        <div class="grid u-margin-top--medium">
+          <div class="grid__item item__1">
+            <h3 class="heading-tertiary">
+              Deep <br />
+              Earth
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="
-              background-image: url(./images/desktop/image-night-arcade.jpg);
-            "
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__2">
+            <h3 class="heading-tertiary">
               Night <br />
               Arcade
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="
-              background-image: url(./images/desktop/image-soccer-team.jpg);
-            "
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__3">
+            <h3 class="heading-tertiary">
               Soccer <br />
               Team VR
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="background-image: url(./images/desktop/image-grid.jpg)"
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__4">
+            <h3 class="heading-tertiary">
               The <br />
               Grid
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="background-image: url(./images/desktop/image-from-above.jpg)"
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__5">
+            <h3 class="heading-tertiary">
               From Up <br />
               Above VR
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="
-              background-image: url(./images/desktop/image-pocket-borealis.jpg);
-            "
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__6">
+            <h3 class="heading-tertiary">
               Pocket <br />
               borealis
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="background-image: url(./images/desktop/image-curiosity.jpg)"
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__7">
+            <h3 class="heading-tertiary">
               The <br />
               Curiosity
-            </p>
+            </h3>
           </div>
-          <div
-            class="grid__item"
-            style="background-image: url(./images/desktop/image-fisheye.jpg)"
-          >
-            <p class="heading-tertiary">
+          <div class="grid__item item__8">
+            <h3 class="heading-tertiary">
               Make It <br />
               Fisheye
-            </p>
+            </h3>
           </div>
         </div>
       </section>
