--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <style>
       .attribution {
         font-size: 11px;
+        color: white;
+        background-color: black;
         text-align: center;
       }
       .attribution a {
@@ -191,7 +193,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Bryan Lee</a>.
     </div>
   </body>
 </html>
