features section responsive for phone

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       >
         <div class="features__heading">
           <h2 class="heading-secondary">Our Creations</h2>
-          <a href="#" class="btn">See all</a>
+          <a href="#" class="btn features__btn--desktop">See all</a>
         </div>
         <div class="grid u-margin-top--medium">
           <div class="grid__item item__1">
@@ -134,6 +134,7 @@
             </h3>
           </div>
         </div>
+        <a href="#" class="btn features__btn--mobile">See all</a>
       </section>
     </main>
 
