footer responsive for phone

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <header class="header u-margin-right-left--big u-padding-top--small">
         <nav class="navigation">
           <img class="navigation__logo" src="./images/logo.svg" alt="" />
-          <ul class="navigation-list">
+          <ul class="header__navigation-list navigation-list">
             <li class="navigation-item">About</li>
             <li class="navigation-item">Careers</li>
             <li class="navigation-item">Events</li>
@@ -142,7 +142,7 @@
       <footer class="footer u-margin-right-left--big">
         <div class="footer__nav">
           <img src="./images/logo.svg" alt="Logo" />
-          <ul class="navigation-list">
+          <ul class="footer__navigation-list navigation-list">
             <li class="navigation-item">About</li>
             <li class="navigation-item">Careers</li>
             <li class="navigation-item">Events</li>
