menu overlay html & css

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <li class="navigation-item">Products</li>
             <li class="navigation-item">Support</li>
           </ul>
+          <img
+            class="navigation__menu-btn--hamburger"
+            src="./images/icon-hamburger.svg"
+            alt=""
+          />
         </nav>
         <div class="header__heading">
           <h1 class="heading-primary">
@@ -53,6 +58,24 @@
           </h1>
         </div>
       </header>
+    </div>
+    <!-- mobile menu nav -->
+    <div class="navigation--mobile-container u-padding-top--small">
+      <nav class="navigation u-margin-right-left--big">
+        <img class="navigation__logo" src="./images/logo.svg" alt="" />
+        <img
+          class="navigation__menu-btn--close"
+          src="./images/icon-close.svg"
+          alt=""
+        />
+      </nav>
+      <ul class="navigation__menu u-margin-right-left--big">
+        <li class="navigation-item--mobile">About</li>
+        <li class="navigation-item--mobile">Careers</li>
+        <li class="navigation-item--mobile">Events</li>
+        <li class="navigation-item--mobile">Products</li>
+        <li class="navigation-item--mobile">Support</li>
+      </ul>
     </div>
 
     <main>
